[gd_scene load_steps=8 format=3 uid="uid://camv04tw28yjr"]

[ext_resource type="Script" uid="uid://bmf1w4vumak7x" path="res://scripts/menu/menu_main.gd" id="1_0ykhv"]
[ext_resource type="Theme" uid="uid://bkyyhibmxbrq8" path="res://assets/UITheme.tres" id="1_2nud1"]
[ext_resource type="FontFile" uid="uid://btdvbprakodnv" path="res://assets/font/GlitchGoblin.ttf" id="2_2wh52"]
[ext_resource type="PackedScene" uid="uid://0fccgu7f77gg" path="res://scenes/menu/Settings.tscn" id="3_2wh52"]

[sub_resource type="Gradient" id="Gradient_hlv2s"]
offsets = PackedFloat32Array(0, 0.00680274, 1)
colors = PackedColorArray(2.69532e-06, 0.497636, 0.662762, 1, 0.00700352, 0.237855, 0.303711, 1, 0.29054, 0.863409, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2nud1"]
gradient = SubResource("Gradient_hlv2s")
fill_from = Vector2(1, 0.803419)
fill_to = Vector2(1, 0.269231)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iv2fv"]
texture = SubResource("GradientTexture2D_2nud1")
region_rect = Rect2(0, 18, 64, 32)

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2nud1")
script = ExtResource("1_0ykhv")

[node name="ScreenControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="ReferenceRect" parent="ScreenControl"]
z_index = 2
layout_mode = 0
offset_top = 658.0
offset_right = 1152.0
offset_bottom = 1306.0

[node name="Background" type="Panel" parent="ScreenControl/Options"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_iv2fv")

[node name="Settings" parent="ScreenControl/Options" instance=ExtResource("3_2wh52")]
z_index = 1
layout_mode = 1

[node name="Start" type="ReferenceRect" parent="ScreenControl"]
layout_mode = 0
offset_left = 1162.0
offset_right = 2314.0
offset_bottom = 648.0

[node name="Background" type="Panel" parent="ScreenControl/Start"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_iv2fv")

[node name="SelectMatchLabel" type="Label" parent="ScreenControl/Start"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -302.5
offset_top = 54.0
offset_right = 302.5
offset_bottom = -394.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_2wh52")
theme_override_font_sizes/font_size = 86
text = "Select Match"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenControl/Start"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -347.0
offset_right = 150.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4

[node name="Singleplayer" type="Button" parent="ScreenControl/Start/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3
text = "Singleplayer"

[node name="Host" type="Button" parent="ScreenControl/Start/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Host Match
"

[node name="Join" type="Button" parent="ScreenControl/Start/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Join Match
"

[node name="Main" type="ReferenceRect" parent="ScreenControl"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="ScreenControl/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_iv2fv")

[node name="TitleLabel" type="Label" parent="ScreenControl/Main"]
custom_minimum_size = Vector2(350, 200)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = 72.0
offset_right = 175.0
offset_bottom = -376.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_2wh52")
theme_override_font_sizes/font_size = 100
text = "Chess+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenControl/Main"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = 312.0
offset_right = 150.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Start" type="Button" parent="ScreenControl/Main/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Start Game"

[node name="Settings" type="Button" parent="ScreenControl/Main/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "Settings"

[node name="Exit" type="Button" parent="ScreenControl/Main/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Exit
"

[connection signal="ready" from="ScreenControl/Start" to="." method="_on_ready"]
[connection signal="pressed" from="ScreenControl/Start/VBoxContainer/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="ScreenControl/Main/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ScreenControl/Main/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ScreenControl/Main/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
